--- a/index.html
+++ b/index.html
@@ -7,9 +7,5 @@
     <script></script>
     <script scr="new.js"></script>
 </head>
-<body>
-    <h1>hello world</h1>
-    <script src="new.js"></script>   
-    </script>
-</body>
+<body></body>
 </html>
